<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_step_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/horizontalHalf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="301dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/short_description_text_view"
        style="@style/StepTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/step_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Step Title"
        tools:layout_editor_absoluteX="16dp"
        app:layout_constraintTop_toTopOf="@+id/horizontalHalf" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/short_description_text_view">

        <TextView
            android:id="@+id/description_text_view"
            style="@style/StepDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/step_description"
            android:visibility="visible"
            tools:text="Step Description" />

    </ScrollView>

    <Button
        android:id="@+id/button_previous"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic_arrow_up"
        android:contentDescription="@string/previous_button"
        android:text="@string/button_previous"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Previous"
        android:drawableStart="@drawable/ic_arrow_up"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/button_next"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_arrow_down"
        android:contentDescription="@string/next_button"
        android:text="@string/button_next"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_previous"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Next"
        android:drawableEnd="@drawable/ic_arrow_down"
        tools:layout_editor_absoluteX="279dp" />

    <FrameLayout
        android:id="@+id/media_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/horizontalHalf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/player_view"
            android:visibility="visible"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/thumbnail_view"
            android:visibility="visible"
            android:contentDescription="@string/thumbnail_image_of_recipe_step" />

    </FrameLayout>


</android.support.constraint.ConstraintLayout>